# automatic-enigma

./: .envrc.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db.sqlite3  heroku.yml  manage.py  pyproject.toml  requirements.txt
appointment/: admin.py  apps.py  models.py
appointment/management/commands/: bootstrap_appointment_data.py
appointment/migrations/: 0001_initial.py  0002_auto_20210404_1731.py  0003_historicalappointment_historicalfollowup_historicalstate_historicaltimeslot.py
backend/: settings.py  urls.py  views.py  wsgi.py
finance/: admin.py  apps.py  constants.py  models.py
finance/management/commands/: bootstrap_finance_with_mock_data.py
finance/migrations/: 0001_initial.py  0002_auto_20210404_1731.py  0003_historicalcredit_historicalpayment_historicalpaymentmode.py  0004_auto_20210405_1716.py
patient/: admin.py  apps.py  constants.py  models.py
patient/management/commands/: bootstrap_patient_data.py
patient/migrations/: 0001_initial.py  0002_historicalpatient_historicalpatientdetail_historicalphonenumber.py  0003_auto_20210405_1716.py  0004_auto_20210422_1725.py  0005_auto_20210424_1849.py
staff/: admin.py  constants.py  models.py
staff/management/commands/: bootstrap_db.py  bootstrap_staff_data.py
staff/migrations/: 0001_initial.py  0002_auto_20210323_2113.py  0003_auto_20210404_1731.py  0004_auto_20210405_1202.py
treatment/: admin.py  apps.py  models.py
treatment/migrations/: 0001_initial.py  0002_auto_20210502_2303.py
