[tool.poetry]
name = "automatic-enigma"
version = "0.1.0"
description = ""
authors = ["Abhishek Juneja <abhishek.juneja145@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
gunicorn = "^20.0.4"
pytz = "^2021.1"
whitenoise = "^5.2.0"
dj-database-url = "^0.5.0"
django-configurations = "^2.2"
django-extensions = "^3.1.1"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
Werkzeug = "^1.0.1"
ipython = "^7.21.0"
pre-commit = "^2.11.1"
django-debug-toolbar = "^3.2"
django-querycount = "^0.7.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
